Changes for 2.2.3rc1

New features:
.D........ [ZBX-7597] added description of the returned value types to the agentd manpage (Richlv)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Italian and Japanese translations; thanks to Zabbix translators (Richlv)

Bug fixes:
........S. [ZBX-7836] fixed possible crash when a value older than the last item value was added to the value cache (wiper)
..F....... [ZBX-7851] fixed item, trigger and discovery rule sorting by "Status" field (Ivo)
..F....... [ZBX-7858] fixed some triggers not being displayed in Monitoring -> Triggers (Pavels)
...G...... [ZBX-6933] added substitution of eventlog parameter insertion strings (wiper)
...G...... [ZBX-7853] changed log level from warning to information when listener, active checks and collector processes start (igors)
.......PS. [ZBX-7614] fixed incorrect activation of inactive host if its item has bad syntax (igors)
A.F....... [ZBX-7829] fixed reserving of new ids for standalone installations (Sasha)
A......... [ZBX-6742] fixed templated graph item validation when items seem to belong to multiple hosts (Ivo)
A.F.....S. [ZBX-7674] implemented batch processing of IT services to resolve deadlocks and improve performance (Eduard, wiper)
..F....... [ZBX-7808] fixed latest data columns width proportions (Eduard)
........S. [ZBX-7817] fixed SQL errors while linking applications to a host (Sasha)
..F....... [ZBX-7754] fixed possibility to add a trigger expression with log function selected and improved error messaging in trigger expression pop-up (Ivo)
..F....... [ZBX-7768] fixed item valuemap import (Eduard)
..F....... [ZBX-7727] added SQL connection errors displaying for Oracle and DB2 (Oleg)
........S. [ZBX-5789] improved performance of processing discovered graphs by the low-level discovery rule (Sasha)
........S. [ZBX-5789] fixed updating of low-level discovered graphs: the graph identifier never will change (Sasha)
..F....... [ZBX-7772] fixed HTTP authentication error (Eduard)